Native builds with GraalVm